--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <style>
 
 table {
-  border-collapse:collapse;
-  margin:0;
-  padding:0;
-  width:100% !important;
+  border-collapse: collapse;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 td {
@@ -16,12 +16,22 @@ td {
   padding-right: 0;
   border-top: 0;
   height: 100%!important;
-  width: 100%!important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Helvetica Neue',Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  margin-top: 30px;
+}
+
+hr {
+  border-bottom: none;
 }
 
 .container {
   background-color: #f2f2f2;
   height:100% !important;
+  width: 100% !important;
 }
 
 .inner-container {
@@ -30,30 +40,30 @@ td {
 }
 
 .button {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   word-wrap: break-word;
   color: #fff !important;
   text-decoration: none;
   background-color: #0088ce;
   border-radius: 5px;
-  margin-top: 12px;
-  font-size: 18px;
-  min-height: 60px;
-  line-height: 60px;
+  margin-top: 12px; 
+  min-height: 40px;
+  line-height: 40px;
   width: auto;
   display: inline-block;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   text-align: center;
-  font-weight: bold !important;
 }
 
 p {
   line-height: 150%;
   margin: 1em 0;
   padding: 0;
-  color: #606060;
-  font-family: Arial,'Helvetica Neue',Helvetica,sans-serif;
-  font-size: 14px;
+  color: #909090;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 300;
   text-align: left;
 }
 
@@ -64,7 +74,39 @@ p {
 
 .main-content {
   background: #fff;
-  width: 100%;
+}
+
+.heading {
+  text-transform: uppercase;
+}
+
+.summary-heading {
+  color: #0088ce;
+  font-size: 14px;
+  letter-spacing: 2px;
+  margin: 0;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.summary-row > td {
+  padding: 0 30px;
+  padding-bottom: 20px;
+}
+
+.summary-value {
+  color: #999;
+  font-weight: 300;
+  margin: 0;
+}
+
+.state-critical {
+  color: #f00;
+}
+
+.footer {
+  color: #666;
+  font-size: 11px;
 }
 
 </style>
@@ -79,9 +121,72 @@ p {
               <img src="deta_logo_default.png" width="150">
             </td>
           </tr>
-          <tr>
+          <tr class="summary-row">
             <td valign="top" align="center">
-              <p></p>
+              <h1 class="heading">Daily Summary</h1>
+              <hr>
+              <p>Hi Yang Shun,</p>
+              <p>Monitoring has detected the following:</p>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <h6 class="summary-heading">Entity</h6>
+              <p class="summary-value">o_nuhs14.u_548283b26684e024d7dc6f14</p>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <table width="100%">
+                <tr>
+                  <td width="50%">
+                    <h6 class="summary-heading">Check</h6>
+                    <p class="summary-value">Battery Low</p>
+                  </td>
+                  <td valign="top" width="50%">
+                    <h6 class="summary-heading">State</h6>
+                    <p class="summary-value"><span class="state-critical">Critical</span></p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <table width="100%">
+                <tr>
+                  <td width="50%">
+                    <h6 class="summary-heading">Time</h6>
+                    <p class="summary-value">2015-01-26 13:29:17 +0800</p>
+                  </td>
+                  <td valign="top" width="50%">
+                    <h6 class="summary-heading">Duration</h6>
+                    <p class="summary-value">2 mins 56 secs</p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <h6 class="summary-heading">Summary</h6>
+              <p class="summary-value">Healthy lifestyle you have there!</p>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <a class="button">View Stats</a>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <p>Regards, <br>Detalytics</p>
+            </td>
+          </tr>
+          <tr class="summary-row">
+            <td valign="top" align="center">
+              <hr>
+              <p class="footer">Copyright &copy; 2015, Detalytics, Inc | <a href>Privacy &amp; Terms</a> | To stop receiving emails from Detalytics, click <a href>here</a>.</p>
             </td>
           </tr>
         </table>
