Make summary text longer

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ p {
           <tr class="summary-row">
             <td valign="top" align="center">
               <h6 class="summary-heading">Summary</h6>
-              <p class="summary-value">Healthy lifestyle you have there!</p>
+              <p class="summary-value">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </td>
           </tr>
           <tr class="summary-row">
